2005-11-30  Geoffrey Garen  <ggaren@apple.com>

        Added layout test for <rdar://problem/4344760> REGRESSION 
        (Safari 416.12-417.2) gmail 'reply' does not fill in to: field or 
        quoted message (3751)

        * fast/forms/textarea-setvalue-without-renderer-expected.txt: Added.
        * fast/forms/textarea-setvalue-without-renderer.html: Added.

2005-11-30  Eric Seidel  <eseidel@apple.com>

        No review necessary, removing unused files.

        Removing erroneously committed results content.

        * svg/W3C-SVG-1.1/Resources/animation-add-BE-09-expected.checksum: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-add-BE-09-expected.png: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-add-BE-09-expected.txt: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-extRef-image1-expected.checksum: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-extRef-image1-expected.png: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-extRef-image1-expected.txt: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-extRef-image2-expected.checksum: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-extRef-image2-expected.png: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-extRef-image2-expected.txt: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-extRef-image3-expected.checksum: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-extRef-image3-expected.png: Removed.
        * svg/W3C-SVG-1.1/Resources/animation-extRef-image3-expected.txt: Removed.
        * svg/W3C-SVG-1.1/Resources/coords-units-01-f-expected.checksum: Removed.
        * svg/W3C-SVG-1.1/Resources/coords-units-01-f-expected.png: Removed.
        * svg/W3C-SVG-1.1/Resources/coords-units-01-f-expected.txt: Removed.
        * svg/W3C-SVG-1.1/Resources/ext-TestComic-expected.checksum: Removed.
        * svg/W3C-SVG-1.1/Resources/ext-TestComic-expected.png: Removed.
        * svg/W3C-SVG-1.1/Resources/ext-TestComic-expected.txt: Removed.