@@ -1,0 +1,25 @@
+<html>
+<head>
+    <script>
+    function debug(s) {
+        document.getElementById('console').innerHTML += s + '<br>';
+    }
+    
+    function test() {
+        for (j in index) {
+            testProperty(index[j]);
+        }
+    }
+    function runTests() {
+        if (window.layoutTestController)
+            layoutTestController.dumpAsText()
+        debug(test)
+    }
+    </script>
+</head>
+<body onLoad="runTests()">
+This tests that JavaScriptCore ForInNodes are converted correctly to text. If this test is successful, part of the text below should say "for (j in index)".
+</body>
+<pre id="console">
+</pre>
+</html>
