@@ -1,3 +1,12 @@
+2005-12-01  Anders Carlsson  <andersca@mac.com>
+
+        Reviewed by Geoffrey.
+
+        - Add test for <http://bugzilla.opendarwin.org/show_bug.cgi?id=3382>
+
+        * fast/js/for-in-to-text-expected.txt: Added.
+        * fast/js/for-in-to-text.html: Added.
+
 2005-11-30  Geoffrey Garen  <ggaren@apple.com>
 
         Added layout test for <rdar://problem/4344760> REGRESSION 
